<resources>
    <string name="app_name_temp">AVA</string>
    <string name="app_name">Advanced Vision Analyzer</string>
    <string-array name="sexChoices">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="eyeChoices">
        <item>Left</item>
        <item>Right</item>
    </string-array>
    <string-array name="testTypeChoices">
        <item>Demo</item>
        <item>Suprathreshold</item>
        <item>Threshold</item>
    </string-array>
    <string name="empty"></string>
    <string name="register_test">Register Test</string>
    <string name="enter_patient_age">Enter Patient Age</string>
    <string name="enter_patient_name">Enter Patient Name</string>
    <string name="title_activity_report">Report</string>
    <string name="title_wifi_management">WifiManager</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="calibration_img">CalibrationImage</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="calibrate">Calibrate</string>
    <string name="save_and_proceed">Save and Proceed</string>
    <string name="left">Left</string>
    <string name="suprathresold">Suprathresold</string>
    <string name="name">Name</string>
    <string name="test_eye">Test Eye</string>
    <string name="double_empty">  </string>
    <string name="double_zero">00</string>
    <string name="zerobyeleven">0/11</string>
    <string name="ninebyten">9/10</string>
    <string name="false_negatives">False Negatives</string>
    <string name="false_positives">False Positives</string>
    <string name="calib">Calib</string>
    <string name="abort">Abort</string>
    <string name="pause">Pause</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="test_type">Test Type</string>
    <string name="new_test">New Test</string>
    <string name="restart_test">Restart Test</string>
    <string name="home">Home</string>
    <string name="Show_Sample_Reports">Show Sample Reports</string>
    <string name="eye">Eye</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="view_report">View Report</string>
    <string name="save_report">Save Report</string>
    <string name="fixation_losses">Fixation Losses</string>
    <string name="textview">TextView</string>
    <string name="patient_age">Patient Age</string>
    <string name="start_test">Start Test</string>
    <string name="test">Test</string>
    <string name="not_device_owner">This app is not set as device owner</string>
    <string name="cylindrical_power">Cylindrical Power</string>
    <string name="lens_power_settings">Lens Power Settings</string>
    <string name="spherical_power">Spherical Power</string>
    <string name="cylindrical_axis">Cylindrical Axis</string>
    <string name="continueButton">Continue</string>
    <string name="todo">TODO</string>
    <string name="lessthanzero">    &lt; 0.5</string>
    <string name="lessthanone">    &lt; 1</string>
    <string name="lessthantwo">    &lt; 2</string>
    <string name="lessthanfive">  &lt;5</string>
    <string name="password_hint"><font size="20">Password</font></string>
    <string name="greaterthanfive">  &gt; 5</string>
    <string name="glaucoma">Due to high eye pressure, the optic nerve that sends information to the brain gets damaged. This impacts the field of vision.
The damage is irreversible, and only gets worse if it isn\'t treated. Thankfully, Glaucoma can be limited by eye drops &amp; medication. Only extreme cases require surgery.</string>
    <string name="field_of_vision_72">72 points in your eye were tested to determine sensitivity to light. The lower the sensitivity, the worse is the vision. Each dot on the plot represents a point in your eye that was tested.</string>
    <string name="field_of_vision_72_screening">72 points in your eye were tested to determine sensitivity to light. The lower the sensitivity, the worse is the vision. Each dot on the plot represents a point in your eye that was tested.\n</string>
    <string name="field_of_vision_54">54 points in your eye were tested to determine sensitivity to light. The lower the sensitivity, the worse is the vision. Each dot on the plot represents a point in your eye that was tested.\n
\n• Red - Orange dots = least sensitivity
\n• Yellow - Green = medium sensitivity
\n• Outlined dot = normal sensitivity</string>
    <string name="field_of_vision_54_screening">54 points in your eye were tested to determine sensitivity to light. The lower the sensitivity, the worse is the vision. Each dot on the plot represents a point in your eye that was tested.\n</string>
    <string name="agarwal">DR.AGARWAL\'S EYE HOSPITAL   CHENNAI</string>
    <string name="ophthalmology">OPHTHALMOLOGY</string>
    <string name="ght">GHT</string>
    <string name="md">MD</string>
    <string name="psd">PSD</string>
    <string name="mrnhint">Please enter MR number and search</string>
    <string name="mobilehint">XXX-XXX-XXXX</string>
    <string name="imageDescription">image</string>
    <string name="searchDescription">search</string>
    <string name="adjust_ipd_settings">Adjust IPD Settings</string>
    <string name="right_eye">Right Eye</string>
    <string name="adjust_ipd_so_that_eyes_are_centered">Make sure pupil is centered using IPD adjustment Knob</string>
    <string name="enter_spherical_power">Enter Spherical Power</string>
    <string name="enter_cylindrical_power">Enter Cylindrical Power</string>
    <string name="enter_cylindrical_axis">Enter Cylindrical Axis</string>
    <string name="calibration">Calibration</string>
    <string name="peter_parker">Peter Parker</string>
    <string name="male">Male</string>
    <string name="copyrights">&#169; 2020 Elisar Life Sciences Pvt Ltd</string>
    <string name="_32">32</string>
    <string name="elisar_fast">Elisar Fast</string>
    <string name="test_strategy">Test Strategy</string>
    <string name="_1002132">1002132</string>
    <string name="ask_patient_to_look_at_the_center_of_the_screen">Ask patient to look at the center of the screen</string>
    <string name="_0_0">0/0</string>
    <string name="patient_details">Patient Details</string>
    <string name="please_enter_patient_name">Please enter patient name</string>
    <string name="patient_name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="gender">Gender</string>
    <string name="go">GO</string>
    <string name="test_details">Test Details</string>
    <string name="select_test_eye">Select test eye</string>
    <string name="select_test_pattern">Select test pattern</string>
    <string name="select_test_strategy">Select test strategy</string>
    <string name="test_profile">Test Profile</string>
    <string name="samson">Samson</string>
    <string name="_00">00</string>
    <string name="_1234569870">1234569870</string>
    <string name="_30_08_1992">30/08/1992</string>
    <string name="test_pattern">Test Pattern</string>
    <string name="_24_2">24–2</string>
    <string name="eye_power">Eye power</string>
    <string name="spherical_1_2">Spherical: + 1.2</string>
    <string name="cylindrical_1_2">Cylindrical: - 1.2</string>
    <string name="cylindrical_axis_1_2">Cylindrical Axis: - 1.2</string>
    <string name="mrn">MRN</string>
    <string name="high_probability">High Probability</string>
    <string name="dot">.</string>
    <string name="initializing_hotspot">Initializing hotspot…</string>
    <string name="hotspot_initialized">Hotspot initialized…</string>
    <string name="switch_on_hmd">Switch On HMD</string>
    <string name="waiting_for_hmd_connection">Waiting for HMD Connection…</string>
    <string name="hmd_connected">HMD Connected…</string>
    <string name="syncing">Syncing TC-HMD …</string>
    <string name="synced">TC-HMD Synced …</string>
    <string name="wait_for_hmd">Wait for HMD</string>
    <string name="sync">Sync</string>
    <string name="test_result">Test Result</string>
    <string name="fixation_state">Fixation State</string>
    <string name="retest">ReTest</string>
    <string name="save">Save</string>
    <string name="continue_old_session">Continue Old Session</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="hmd_settings">HMD Details</string>
    <string name="vr_man">vr_man</string>
    <string name="proceed">Proceed</string>
    <string name="powered_by_elisar">Powered By Elisar</string>
    <string name="you_re_within_the_5_of_people_who_didn_t_see_the_light_in_these_points">You\'re within the 5% of people who didn\'t see the light in these points.</string>
    <string name="you_re_within_the_2_of_people_who_didn_t_see_the_light_in_these_points">You\'re within the 2% of people who didn\'t see the light in these points.</string>
    <string name="you_re_within_the_1_of_people_who_didn_t_see_the_light_in_these_points">You\'re within the 1% of people who didn\'t see the light in these points.</string>
    <string name="you_re_within_the_0_5_of_people_who_didn_t_see_the_light_in_these_points">You\'re within the 0.5% of people who didn\'t see the light in these points.</string>
    <string name="defective_points_21_74">Defective points: 21 / 74</string>
    <string name="please_scan_the_qr_which_sent_to_your_registered_email_id">Please scan the QR which sent to your registered Email ID</string>
    <string name="forget_password_admin_qr_scan">Please scan the QR code sent to your registered Email ID</string>
    <string name="having_trouble">Having Trouble ?</string>
    <string name="refresh">Refresh</string>
    <string name="device_information">Device Information</string>
    <string name="device_id">DEVICE ID</string>
    <string name="hmd_id">HMD ID</string>
    <string name="org_id">ORG ID</string>
    <string name="info">Info</string>
    <string name="print">print</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="network">Network</string>
    <string name="batterylevel">BatteryLevel</string>
    <string name="hmdstatus">HMDStatus</string>
    <string name="hotspot_status">Hotspot Status</string>
    <string name="search">Search</string>
    <string name="pd_message">Pattern Deviation not shown for severely depressed fields. Refer to Total Deviation</string>
    <string name="stop_kiosk">Stop Kiosk</string>
    <string name="wifi_manager">Wifi Manager</string>
    <string name="mobile_data_manager">Mobile Data Manager</string>
    <string name="doctor_s_copy">Doctor\'s Copy</string>
    <string name="patient_s_copy">Patient\'s Copy</string>
    <string name="outside_normal_limits">Outside normal limits</string>
    <string name="this_indicates_a_high_probability_of_glaucoma">This indicates a high probability of Glaucoma</string>
    <string name="our_advice">Our advice</string>
    <string name="sync_now">  Sync Now  </string>
    <string name="hmd_details">HMD Details</string>
    <string name="note_you_have_test_results_not_synced_with_server_press_sync_now">Note: You have test results not synced with server. Press sync now.</string>
    <string name="turnoff_hmd">   TurnOff HMD   </string>
    <string name="reboot_hmd">   Reboot HMD   </string>
    <string name="submit">Submit</string>
    <string name="enter_password"><font size="18">Enter password</font></string>
    <string name="re_enter_password"><font size="18">Re-enter password</font></string>
    <string name="enter_pin"><font size="18">Enter PIN</font></string>
    <string name="re_enter_pin"><font size="18">Re-enter PIN</font></string>
    <string name="bluetooth">Bluetooth</string>
</resources>