<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_doctor_delete_report"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_doctor_print_report"
        android:icon="@drawable/ic_print_white_48px"
        android:orderInCategory="100"
        android:title="@string/print"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_doctor_bluetooth_report"
        android:icon="@drawable/ic_bluetooth_white_36dp"
        android:orderInCategory="100"
        android:title="@string/bluetooth"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_doctor_email_report"
        android:icon="@drawable/ic_send_white_48px"
        android:orderInCategory="100"
        android:title="@string/send"
        app:showAsAction="ifRoom" />

</menu>