<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_network_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_network_wifi_white_24px"
        android:title="@string/network"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_battery_level"
        android:orderInCategory="100"
        android:icon="@drawable/ic_battery_20_white_24dp"
        android:title="@string/batterylevel"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_hmd_status"
        android:orderInCategory="100"
        android:icon="@drawable/ic_wifi_tethering_on"
        android:title="@string/hotspot_status"
        app:showAsAction="ifRoom"/>


</menu>