<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:id="@+id/back_view"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:id="@+id/front_view"
            android:layout_width="497dp"
            android:layout_height="850dp"
            android:layout_marginEnd="51dp"
            android:layout_marginStart="52dp"
            android:background="@drawable/rounded_corner"
            android:elevation="5dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_anchor="@id/back_view"
            app:layout_anchorGravity="bottom|center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:text="@string/hmd_details"
                android:textColor="#4a4a4a"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hmd_id"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/hmd_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/org_id"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/org_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:weightSum="2"
                android:padding="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/reboot"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_corner_button_blue_filled"
                    android:text="@string/reboot_hmd"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/shutdown"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_corner_button_blue_filled"
                    android:text="@string/turnoff_hmd"
                    android:textColor="@color/white" />


            </LinearLayout>

            <TextView
                android:id="@+id/unsynced_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:padding="16dp"
                android:text="@string/note_you_have_test_results_not_synced_with_server_press_sync_now"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/sync_details_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_colored_corner_with_white_filled"
                android:text="@string/sync_now"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="invisible" />


        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>