<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_splash_screen"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/admin_profile_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Set password for Admin Profile"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_admin_password_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="120dp"
        android:background="@color/transparent_bg"
        app:hintTextColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_profile_header"
        app:passwordToggleDrawable="@drawable/toggle_password_white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <EditText
            android:id="@+id/enter_admin_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:cursorVisible="true"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/re_enter_password_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="32dp"
        android:background="@color/transparent_bg"
        app:hintTextColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_admin_password_layout"
        app:passwordToggleDrawable="@drawable/toggle_password_white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <EditText
            android:id="@+id/re_enter_admin_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:cursorVisible="true"
            android:hint="@string/re_enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/set_admin_password_proceed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="245dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="244dp"
        android:background="@drawable/new_ripple_effect"
        android:onClick="settingsClickCallback"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/re_enter_password_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>